--- a/app/src/main/res/layout/activity_emergency_dialing_list.xml
+++ b/app/src/main/res/layout/activity_emergency_dialing_list.xml
@@ -35,12 +35,10 @@
 
     <FrameLayout
         android:id="@+id/ambulanceFrame"
-        android:layout_width="365dp"
+        android:layout_width="330dp"
         android:layout_height="65dp"
         android:layout_marginTop="22dp"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteX="25dp"
-        tools:layout_editor_absoluteY="398dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emergencyDialIcon">
@@ -52,17 +50,15 @@
             android:background="@drawable/fourside_roundbutton"
             android:clickable="false"
             android:fontFamily="@font/baloo"
-            android:paddingTop="11dp"
+            android:paddingTop="13dp"
             android:text="@string/ambulance"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="29sp"
-            tools:layout_editor_absoluteX="2dp"
-            tools:layout_editor_absoluteY="226dp" />
+            android:textSize="26sp"/>
 
         <ImageView
             android:id="@+id/hospitalIcon"
-            android:layout_width="73dp"
+            android:layout_width="60dp"
             android:layout_height="53dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="6dp"
@@ -73,12 +69,10 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginVertical="8dp"
-            android:layout_marginLeft="303dp"
+            android:layout_marginLeft="270dp"
             android:background="@drawable/call_button"
             android:contentDescription="@string/callBtn1"
             app:srcCompat="@drawable/call_icon"
-            tools:layout_editor_absoluteX="200dp"
-            tools:layout_editor_absoluteY="469dp"
             android:clickable="true"/>
 
     </FrameLayout>
@@ -86,7 +80,7 @@
 
     <FrameLayout
         android:id="@+id/polisFrame"
-        android:layout_width="365dp"
+        android:layout_width="330dp"
         android:layout_height="65dp"
         android:orientation="horizontal"
         android:layout_marginTop="28dp"
@@ -103,29 +97,25 @@
             android:background="@drawable/fourside_roundbutton"
             android:clickable="false"
             android:fontFamily="@font/baloo"
-            android:paddingTop="11dp"
+            android:paddingTop="13dp"
             android:text="@string/polis"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="29dp"
-            tools:layout_editor_absoluteX="2dp"
-            tools:layout_editor_absoluteY="226dp" />
+            android:textSize="26dp" />
 
         <ImageButton
             android:id="@+id/callButton2"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginVertical="8dp"
-            android:layout_marginLeft="303dp"
+            android:layout_marginLeft="270dp"
             android:background="@drawable/call_button"
             android:contentDescription="@string/callBtn2"
-            app:srcCompat="@drawable/call_icon"
-            tools:layout_editor_absoluteX="200dp"
-            tools:layout_editor_absoluteY="469dp" />
+            app:srcCompat="@drawable/call_icon" />
 
         <ImageView
             android:id="@+id/polisIcon"
-            android:layout_width="73dp"
+            android:layout_width="60dp"
             android:layout_height="53dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="6dp"
@@ -137,7 +127,7 @@
 
     <FrameLayout
         android:id="@+id/FireBrigadeFrame"
-        android:layout_width="365dp"
+        android:layout_width="330dp"
         android:layout_height="65dp"
         android:orientation="horizontal"
         android:layout_marginTop="22dp"
@@ -152,30 +142,26 @@
             android:background="@drawable/fourside_roundbutton"
             android:clickable="false"
             android:fontFamily="@font/baloo"
-            android:paddingTop="11dp"
+            android:paddingTop="13dp"
             android:text="@string/fireBrigade"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="29sp"
-            tools:ignore="TextSizeCheck"
-            tools:layout_editor_absoluteX="2dp"
-            tools:layout_editor_absoluteY="226dp" />
+            android:textSize="26sp"
+            tools:ignore="TextSizeCheck" />
 
         <ImageButton
             android:id="@+id/callButton3"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginVertical="8dp"
-            android:layout_marginLeft="303dp"
+            android:layout_marginLeft="270dp"
             android:background="@drawable/call_button"
             android:contentDescription="@string/callBtn3"
-            app:srcCompat="@drawable/call_icon"
-            tools:layout_editor_absoluteX="200dp"
-            tools:layout_editor_absoluteY="469dp" />
+            app:srcCompat="@drawable/call_icon" />
 
         <ImageView
             android:id="@+id/fireBrigadeIcon"
-            android:layout_width="73dp"
+            android:layout_width="60dp"
             android:layout_height="53dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="6dp"
@@ -184,7 +170,7 @@
 
     <FrameLayout
         android:id="@+id/NaturalDisasterFrame"
-        android:layout_width="365dp"
+        android:layout_width="330dp"
         android:layout_height="65dp"
         android:layout_marginTop="22dp"
         android:orientation="horizontal"
@@ -200,31 +186,27 @@
             android:background="@drawable/fourside_roundbutton"
             android:clickable="false"
             android:fontFamily="@font/baloo"
-            android:paddingTop="11dp"
+            android:paddingTop="13dp"
             android:text="@string/naturalDisaster"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="29sp"
-            tools:layout_editor_absoluteX="2dp"
-            tools:layout_editor_absoluteY="226dp" />
+            android:textSize="26sp" />
 
         <ImageButton
             android:id="@+id/callButton4"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginVertical="8dp"
-            android:layout_marginLeft="303dp"
+            android:layout_marginLeft="270dp"
             android:background="@drawable/call_button"
             android:contentDescription="@string/callBtn4"
-            app:srcCompat="@drawable/call_icon"
-            tools:layout_editor_absoluteX="200dp"
-            tools:layout_editor_absoluteY="469dp" />
+            app:srcCompat="@drawable/call_icon" />
 
         <ImageView
             android:id="@+id/naturalDIsasterIcon"
-            android:layout_width="73dp"
+            android:layout_width="50dp"
             android:layout_height="53dp"
-            android:layout_marginHorizontal="4dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="6dp"
             app:srcCompat="@drawable/natural_disaster_icon" />
 
