--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -123,11 +123,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_50sdp"
                 android:layout_marginTop="@dimen/_15sdp"
+                android:background="@color/theme_darkblue"
                 android:text="Sign Up"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="@dimen/_13ssp"
-                app:cornerRadius="@dimen/_8sdp"
+                app:cornerRadius="@dimen/_10sdp"
                 />
 
             <ProgressBar
