--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Base.Theme.Group_Project" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Base.Theme.Group_Project" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/theme_darkblue</item>
         <item name="android:titleTextAppearance">@string/moduleTitle</item>
         <item name="statusBarBackground">@color/theme_darkblue</item>
