--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="record_pressed_color">#D8D8D8</color>
     <color name="color_primary">#5C86AD</color>
     <color name="color_secondary">#D8DDF4</color>
+    <color name="swipe_left_backg">#DB6C6C</color>
+    <color name="swipe_right_backg">#77B296</color>
 
 </resources>
