--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="color_secondary">#D8DDF4</color>
     <color name="swipe_left_backg">#DB6C6C</color>
     <color name="swipe_right_backg">#77B296</color>
+    <color name="notification_backg">#FFFFFFFF</color>
+
 
 </resources>
