--- a/app/src/main/res/layout/emergency_menu.xml
+++ b/app/src/main/res/layout/emergency_menu.xml
@@ -9,15 +9,14 @@
         android:id="@+id/framelayout1"
         android:layout_width="350dp"
         android:layout_height="100dp"
+        android:gravity="center"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="80dp"
-        android:gravity="center"
-        android:background="@drawable/fourside_roundbutton"
         app:layout_constraintBottom_toTopOf="@+id/framelayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        >
+        android:background="@drawable/fourside_roundbutton">
 
         <ImageView
             android:id="@+id/sosIcon"
