--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/background_content_top"
         app:layout_constraintBottom_toTopOf="@id/layoutSend"
         app:layout_constraintTop_toTopOf="parent"/>
-;
+
     <View
         android:id="@+id/headerBackground"
         android:layout_width="match_parent"
@@ -25,6 +25,15 @@
         app:layout_constraintBottom_toTopOf="@id/viewSupporter"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <ImageView
+        android:id="@+id/back_arrow_chat"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        app:srcCompat="@drawable/back_arrow"
+        app:layout_constraintTop_toTopOf="@id/headerBackground"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/headerBackground"/>
+
     <TextView
         android:id="@+id/textName"
         android:layout_width="300dp"
@@ -32,16 +41,16 @@
         android:layout_marginStart="@dimen/_8sdp"
         android:layout_marginEnd="@dimen/_8sdp"
         android:ellipsize="end"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:maxLines="1"
         android:textColor="@color/black"
         android:textSize="@dimen/_14ssp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/headerBackground"
-        app:layout_constraintStart_toStartOf="@id/headerBackground"
         app:layout_constraintEnd_toEndOf="@id/headerBackground"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintStart_toEndOf="@id/back_arrow_chat"
+        app:layout_constraintTop_toTopOf="parent">
 
     </TextView>
 
@@ -70,8 +79,6 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-
-
     <FrameLayout
         android:id="@+id/layoutSend"
         android:layout_width="50dp"
@@ -83,7 +90,6 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/sendIcon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="4dp"
@@ -110,6 +116,7 @@
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textColorHint="@color/black"
+        android:fontFamily="sans-serif"
         android:background="@drawable/background_chat_input"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/layoutSend"
@@ -124,6 +131,7 @@
         app:layout_constraintTop_toBottomOf="@id/viewSupporter"
         android:background="#008000"
         android:textSize="@dimen/_10ssp"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:textColor="@color/white"
         android:padding="@dimen/_2sdp"
