--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,51 @@
     android:background="@color/theme2_babyblue"
     tools:context=".activties.MainActivity">
 
+    <View
+        android:id="@+id/View4"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/theme_darkblue"
+        app:layout_constraintBottom_toBottomOf="@+id/EmergencyChatPage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/EmergencyChatPage"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_marginStart="62dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/chat"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/back_arrow_chat"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back_arrow" />
+
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/imageProfile"
         android:layout_width="@dimen/_30sdp"
         android:layout_height="@dimen/_30sdp"
         android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginLeft="@dimen/_16sdp"
         android:layout_marginTop="@dimen/_12sdp"
-        android:background="@drawable/background_icon"
-        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/background_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/View4"
         app:riv_corner_radius="@dimen/_8sdp"
+        android:scaleType="centerCrop"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -33,7 +66,7 @@
         android:padding="@dimen/_6sdp"
         android:src="@drawable/sign_out_icon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/View4"
         android:tint="@color/black"/>
 
     <FrameLayout
@@ -79,6 +112,7 @@
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
+        android:fontFamily="sans-serif"
         android:textColor="@color/black"
         android:textSize="@dimen/_14ssp"
         android:textStyle="bold"
