--- a/app/src/main/res/layout/activity_real_time_location.xml
+++ b/app/src/main/res/layout/activity_real_time_location.xml
@@ -6,83 +6,101 @@
     android:layout_height="match_parent"
     tools:context=".RealTimeLocation">
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:background="@color/theme_darkblue"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        />
+
+    <TextView
+        android:id="@+id/EmergencyLocationPage"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_toRightOf="@+id/back_arrow_location"
+        android:layout_alignTop="@+id/back_arrow_location"
+        android:text="@string/location"
+        android:fontFamily="sans-serif"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/back_arrow_location"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="10dp"
+        app:srcCompat="@drawable/back_arrow" />
+
     <fragment
         android:id="@+id/google_map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="351dp"
+        android:layout_width="350dp"
         android:layout_height="500dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/LocateTitle"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="69dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp" />
 
     <TextView
         android:id="@+id/LocateTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/EmergencyLocationPage"
         android:layout_marginStart="34dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="70dp"
+        android:fontFamily="sans-serif"
         android:text="@string/locationTitle"
         android:textColor="@color/black"
         android:textSize="25dp"
         android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/imageView"
         android:layout_width="wrap_content"
-        android:layout_height="33dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginBottom="24dp"
-        android:layout_toEndOf="@+id/LocateTitle"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/LocateTitle"
+        android:layout_toRightOf="@id/LocateTitle"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="6dp"
         app:srcCompat="@drawable/location_icon" />
 
 
     <FrameLayout
-        android:id="@+id/shareBtn"
         android:layout_width="wrap_content"
         android:layout_height="61dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@id/google_map"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="600dp"
+        android:layout_marginTop="520dp"
         android:layout_marginEnd="50dp"
-        android:background="@drawable/fourside_roundbutton"
         >
 
         <ImageButton
             android:id="@+id/BtnshareLocation"
-            android:layout_width="300dp"
+            android:layout_width="310dp"
             android:layout_height="match_parent"
-            android:fontFamily="@font/baloo"
-            android:paddingTop="11dp"
-            android:background="@drawable/fourside_roundbutton"
+            android:background="@drawable/blue_fourside_roundbutton"
             android:text="@string/shareLocation"
-            android:textAlignment="textEnd"
             android:textColor="@color/black"
-            android:textSize="25sp"
-            android:layout_marginLeft="10dp"/>
+            android:textSize="25sp"/>
 
         <TextView
-            android:id="@+id/TVshareLocation"
             android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="80dp"
-            android:fontFamily="@font/baloo"
+            android:fontFamily="sans-serif"
             android:gravity="center"
-            android:paddingTop="4dp"
             android:text="@string/shareLocation"
             android:textColor="@color/black"
             android:textSize="25sp" />
 
         <ImageView
-            android:id="@+id/shareIcon"
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:layout_marginHorizontal="20dp"
