--- a/app/src/main/res/layout/emergency_menu.xml
+++ b/app/src/main/res/layout/emergency_menu.xml
@@ -5,12 +5,45 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/theme_darkblue"
+        app:layout_constraintBottom_toBottomOf="@+id/EmergencyPage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/EmergencyPage"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_marginStart="62dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/moduleTitle"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/back_arrow_menu"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back_arrow" />
+
     <FrameLayout
         android:id="@+id/framelayout1"
         android:layout_width="350dp"
         android:layout_height="100dp"
         android:gravity="center"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toTopOf="@+id/framelayout2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,7 +52,6 @@
         android:background="@drawable/fourside_roundbutton">
 
         <ImageView
-            android:id="@+id/sosIcon"
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:background="@drawable/left_round_icon"
@@ -33,7 +65,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="100dp"
             android:background="@drawable/right_round_icon"
-            android:fontFamily="@font/baloo"
+            android:fontFamily="sans-serif"
             android:keepScreenOn="true"
             android:text="@string/emergency"
             android:textSize="28sp" />
@@ -54,7 +86,6 @@
         >
 
         <ImageView
-            android:id="@+id/locationIcon"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
@@ -68,7 +99,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="100dp"
             android:background="@drawable/right_round_icon"
-            android:fontFamily="@font/baloo"
+            android:fontFamily="sans-serif"
             android:keepScreenOn="true"
             android:text="@string/location"
             android:textSize="28sp" />
@@ -77,7 +108,6 @@
 
 
     <FrameLayout
-        android:id="@+id/framelayout3"
         android:layout_width="350dp"
         android:layout_height="100dp"
         android:layout_marginTop="50dp"
@@ -88,7 +118,6 @@
         app:layout_constraintTop_toBottomOf="@id/framelayout2">
 
         <ImageView
-            android:id="@+id/emergencyChatIcon"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
@@ -103,7 +132,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="100dp"
             android:background="@drawable/right_round_icon"
-            android:fontFamily="@font/baloo"
+            android:fontFamily="sans-serif"
             android:text="@string/chat"
             android:textSize="28sp" />
 
